manifests/production/virtualmachines/networking.k8s.io_v1_networkpolicy_cdi-upload-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cdi-upload-server
  namespace: virtualmachines
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cdi
      podSelector:
        matchLabels:
          cdi.kubevirt.io: cdi-uploadproxy
    - podSelector:
        matchLabels:
          cdi.kubevirt.io: cdi-clone-source
    ports:
    - port: 8443
  podSelector:
    matchLabels:
      cdi.kubevirt.io: cdi-upload-server
  policyTypes:
  - Ingress
