manifests/production/virtualmachines/networking.k8s.io_v1_networkpolicy_default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: virtualmachines
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
